[metadata]
name = Rmath
version = file: RVERSION
author = Nicolas Tessore
author_email = n.tessore@ucl.ac.uk
description = standalone Rmath library from R
long_description = file: README.md
long_description_content_type = text/markdown
license_files = COPYING
url = https://github.com/ntessore/Rmath-python
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
